Fixed IntCache